--- a/Frontend/app_astro/src/pages/index.astro
+++ b/Frontend/app_astro/src/pages/index.astro
@@ -1,11 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import LogIn from "../components/LogIn.jsx"
+import "../App.scss"
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<svg
+		<LogIn />
+		<!-- <svg
 			class="astro-a"
 			width="495"
 			height="623"
@@ -59,12 +62,16 @@ import Card from '../components/Card.astro';
 				title="Community"
 				body="Come say hi to our amazing Discord community. ❤️"
 			/>
-		</ul>
+		</ul> -->
 	</main>
 </Layout>
 
+<!-- <style lang="scss">
+
+</style> -->
+
 <style>
-	main {
+	/* main {
 		margin: auto;
 		padding: 1rem;
 		width: 800px;
@@ -119,5 +126,5 @@ import Card from '../components/Card.astro';
 		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
 		gap: 2rem;
 		padding: 0;
-	}
+	} */
 </style>
