Intéractivité authentification entamée

--- a/Frontend/app_astro/src/pages/index.astro
+++ b/Frontend/app_astro/src/pages/index.astro
@@ -7,7 +7,7 @@ import "../App.scss"
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<LogIn />
+		<LogIn client:load/>
 		<!-- <svg
 			class="astro-a"
 			width="495"
