--- a/Frontend/app_astro/src/pages/resetpassword.astro
+++ b/Frontend/app_astro/src/pages/resetpassword.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro"
-import SignUp from "../components/SignUp.jsx"
+import ResetPassword from "../components/ResetPassword.jsx"
 import "../App.scss"
 ---
 <Layout title="Inscription">
 
     <main>
-        <SignUp client:load/>
+        <ResetPassword client:load/>
     </main>
 
 </Layout>
