--- a/Frontend/app_astro/src/App.scss
+++ b/Frontend/app_astro/src/App.scss
@@ -61,6 +61,10 @@ $redDeny: #F91D0F;
 
 $yellowTag: #F1F619;
 
+html{
+  background-color: white;
+}
+
 header,footer,.modalities,.reinsurance{
   width: 100vw;
   height: 30vh;
@@ -85,7 +89,7 @@ header,footer,.modalities,.reinsurance{
   // width: 100%;
 }
 
-.details,.banner,.modalities,.reinsurance,.comments,.images,.infos,.menu{
+.details,.banner,.modalities,.reinsurance,.comments,.images,.infos,.menu,.filter{
   @extend %center;
 }
 
@@ -165,7 +169,74 @@ p{
   flex-direction: row;
 }
 
-// Login
+.detailsofproducts{
+  width: 100vw;
+}
+
+.comments{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  padding: 20px;
+}
+.comment{
+  width: 300px;
+  max-height: 250px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 1px 1px 6px 1px #7b7e86;
+  margin: 10px;
+  border: solid 1px black;
+  .top{
+    display: flex;
+    justify-content: space-between;
+    .right{
+      display: flex;
+      flex-direction: row;
+      display: flex;
+      justify-content: space-between;
+      .left{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        font-family: $dg-sb;
+        margin: 0 10px;
+        .name{
+          font-size: $lvl-3;
+        }
+      }
+      .note-comment{
+        color: $green;
+        font-family: $dg-sb;
+        font-size: $lvl-2;
+      }
+    }
+  }
+  .comment-text{
+    font-family: $dms-r;
+    padding-top: 5px;
+  }
+  // .comment-text{
+  // }
+  padding: 10px;
+}
+
+.notes{
+  display:flex;
+  flex-direction: row;
+  .note{
+    border: solid 2px $yellowTag;
+    font-family: $dms-b;
+    color: $yellowTag;
+    width: 20px;
+    height: 20px;
+    border-radius: 40px;
+    background-color: white;
+    @extend %center;
+  }
+}
+
+// Login / Signup / ResetPassword
 
 #background{
   position: absolute;
@@ -290,8 +361,105 @@ p{
   }
 }
 
+.options{
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  // animation-name: bearjump;
+  // animation-duration: 5s;
+  // animation-iteration-count: 10 ;
+  // animation-delay: 0s;
+  // animation-timing-function: linear;
+  button{
+    height: 30px;
+  }
 
+  @keyframes bearjump{
+      // 0%,100%{transform: translateY(0)}
+      // 45%,55%{transform: translateY(-100px)}
+      /*0%{transform: translateY(0)}*/
+  }
 
+  // @keyframes getUp{
+  //   100%{
+  //     height: -
+  //   }
+  // }
+}
+
+//Products
+
+.filter{
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100vh;
+  max-width: max-content;
+  margin-left: 40px;
+  .title-options{
+    border: none;
+    background-color: $red;
+    color: white;
+    // border-radius: 20px;
+    width: 200px;
+    height:40px;
+    @extend %center;
+    font-family: $dg-sb;
+  }
+  button{
+    border: none;
+    background-color: white;
+    font-family: $dms-r;
+  }
+  button:hover{
+    border: none;
+    color: $darkred;
+    font-family: $dms-r;
+  }
+}
+
+.products{
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  box-sizing: border-box;
+}
+
+.AllProducts{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 40px;
+  align-content: space-between;
+  a{
+     text-decoration: none;
+     color: black;
+  }
+}
+
+html,body{
+  height: 100vh;
+  width: 100vh;
+  margin: 0;
+  background: #F5F5DC;
+}
+
+.product{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  font-family: $dms-b;
+  font-size: $lvl-5;
+  img{
+    border-radius: 15px;
+  }
+  .titre{
+    font-size: 1.2em;
+    text-transform: uppercase;
+  }
+  span{
+      text-decoration: none;
+  }
+}
 // .right{
 //   display: flex;
 //   flex-direction: column;
